# ZMEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark.capnp  benchmark.fbs  zmem_bench.cpp  zmem_benchmark.cpp
docs/: ZMEM_BASICS.md  ZMEM_COMPARISONS.md  ZMEM_FORMAT.md  ZMEM_VS_CAPNPROTO.md  ZMEM_VS_FLATBUFFERS.md
